# athlete_player_ai_manager

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  athlete.db  claude.md  docker-compose.yml  gemini.md  main.py  pyproject.toml  todo.md
ai_assistant/: mcp_app.py
app/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: index.html  script.js  style.css
tasks/: AI助手_聊天调用流程图.md  AI助手测试结果总结.md  todo.md  医学耗材AI助手测试对话示例.md  完整系统调用流程图.md  数据库操作流程图.md  核心调用链路流程图.md  简化版_核心调用链路流程图.md  系统启动流程图.md  运动员CRUD_API流程图.md
